# synchrotron

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  pyproject.toml
synchrotron/: comparaison.py  filter.py  main.py
synchrotron/configuration/: __init__.py  sqlalchemy_database.py
synchrotron/configuration/comparaison/: __init__.py
synchrotron/configuration/comparaison/actions/: __init__.py
synchrotron/configuration/comparaison/cache_engines/: __init__.py
synchrotron/configuration/filter/: __init__.py
synchrotron/configuration/storage/: __init__.py
synchrotron/configuration/synchronisation/: __init__.py
synchrotron/configuration/synchronisation/conflict/: __init__.py
synchrotron/database/: __init__.py  utils.py
synchrotron/database/models/: base.py  storage.py  storage_file.py
synchrotron/schema/: filter_properties.py
synchrotron/schema/molecules/: fsspec_file_info.py
synchrotron/utils/: file_info.py  get_one_of.py  github_issue.py  paths_fsspec.py  pydantic_extra_types.py
tests/: test_filter.py
