[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synchrotron"
version = "0.1.0"
description = "Set up file syncing from any source to any destination with ease."
authors = [{name = "Marc Bresson", email = "m.bresson@mailo.eu"}]
license = {text = "EUPL"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fsspec",
    "isodate",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/MarcBresson/synchrotron"
Repository = "https://github.com/MarcBresson/synchrotron"
Issues = "https://github.com/MarcBresson/synchrotron/issues"
